--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -72,19 +72,21 @@ h4 {
     margin-bottom: 1%;
     
 }
-
+ 
+.form {
+    display: flex;
+    justify-content: space-between;
+}
 .formatting {
     #name, #first-name, #email, #subjet-select, #message{
         background-color: #b1f3bc;        
-    }
+    }  
+    
     width: 50%;
-    padding: 0 10px;
+    padding: 0 20px;
 } 
  
-.label-message {
-    height: max-content;
- 
-}
+
 
 
 .map {
