--- a/asset/css/sell.css
+++ b/asset/css/sell.css
@@ -153,7 +153,7 @@ header {
 .title-absolute {
     position: absolute;
     top: 400px;
-    padding: 0 30px 15px;
+    padding: 15px 30px;
     background-color: white;
     border-radius: var(--border-radius);
     text-align: center;
