--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -52,6 +52,12 @@ h1, h2 {
     text-align: center;
 }
 
+p {
+    font-family: opensans;
+    text-align: justify;
+    
+}
+
 /*---------------------------------------*/
 
 
