--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -71,11 +71,11 @@ header {
 /*bannière avec fonction recherche*/
 .banner {
     background-image: url("../images/home/site_corot_1920.jpg");
-    padding: 90px 0;
+    padding: 5rem 0;
 }
 
 .search {
-    width: 70%;
+    width: 90%;
     background-color: #ffffff95;
     margin-left: auto;
     margin-right: auto;
@@ -88,7 +88,7 @@ header {
     display: flex;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     list-style: none;
-    padding: 20px 0;
+    padding: 2rem 0;
     justify-content: space-around;
     margin-top: 25px;
     margin-bottom: 25px;    
@@ -99,9 +99,9 @@ header {
     border-radius: 6px;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    width: 140px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    width: 15rem;
     background-color: #ffffff;
     font-family: 'Open sans', sans-serif;
 }
@@ -113,7 +113,7 @@ header {
 .input_icon_search+i {
     position: absolute;
     top: 8px;
-    left: 117px;
+    left: 210px;
 }
 
 input[type="text"]:focus {
@@ -202,7 +202,7 @@ input[type="text"]:focus {
 
 .activ_news_all span {
    position: relative;
-   top: 30%;
+   top: 25%;
    font-size: 1.1rem;
 }
 
@@ -308,14 +308,13 @@ i[class="fa-solid fa-bed"] {
 .navbar_sell {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     padding-bottom: 30px;
 }
 
 .navbar_sell a {
     text-align: center;
 }
-
-.navbar_sell
 
 .navbar_sell_min_btn {
     display: inline-block;
@@ -439,11 +438,18 @@ i[class="fa-solid fa-bed"] {
     list-style: none;
     line-height: 2em;
 }
+
+.column4 li span {
+    font-size: 0.8rem;
+    padding-left: 0.5rem;
+}
+
 .footer p {
     color: #ffffff;
     font-size: 0.9rem;
     list-style: none;
     line-height: 2em;
+    padding-left: 0.6rem;
 }
 
 .column1 {
@@ -461,11 +467,12 @@ i[class="fa-solid fa-bed"] {
 .column4 .menu_footer {
     font-weight: bold;
 }
+
 .footer i[class="fa-brands fa-square-facebook"] {
     color: #ffffff;
     font-size: 35px;
     margin-top: 10px;
-    margin: 0 10px;
+    padding: 0 10px;
 }
 
 .footer i[class="fa-brands fa-square-twitter"] {
@@ -474,11 +481,24 @@ i[class="fa-solid fa-bed"] {
     margin-top: 10px;
     margin: 0 10px;  
 }
+
 .footer i[class="fa-brands fa-square-instagram"] {
     color: #ffffff;
     font-size: 35px;
     margin-top: 10px;
     margin: 0 10px;  
+}
+
+.footer i[class="fa-solid fa-phone"] {
+    font-size: 0.8rem;
+}
+
+.footer i[class="fa-solid fa-at"] {
+    font-size: 0.8rem;
+}
+
+.footer i[class="fa-solid fa-location-dot"] {
+    font-size: 0.8rem;
 }
 
 .footer i[class="fa-regular fa-copyright"] {
@@ -503,7 +523,7 @@ i[class="fa-solid fa-bed"] {
     display: none;
 }
 
-
+/*------------------------------------------------------*/
 @media all and (max-width: 576px) {
 
     html,body {
@@ -511,6 +531,7 @@ i[class="fa-solid fa-bed"] {
         width: 100%;
       }
 
+/*header : logo et menu*/
     nav ul li {
         display: none;
         }
@@ -527,13 +548,13 @@ i[class="fa-solid fa-bed"] {
         display: block;
     }
 
+/*bannière avec fonction recherche*/
     .banner {
         padding: 0 0;
     }
 
     .search {
         background-color: inherit;
-        
     }
 
     .menu_search {
@@ -553,15 +574,15 @@ i[class="fa-solid fa-bed"] {
         left: 300px;
     }
 
+/*section actualités*/
     .news_slide {
         flex-wrap: wrap;
         padding-left: 2rem;
         padding-right: 2rem;
-
     }
 
     .news_1,news_2 {
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
     }
 
     .news {
@@ -573,28 +594,148 @@ i[class="fa-solid fa-bed"] {
         padding-bottom: 1.5rem;
     }
 
+/*section derniers biens en vente*/
+    .sell {
+        padding-bottom: 0;
+    }
+
     .sell_slide {
         flex-wrap: wrap;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    .sell h1 {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    .sell_frame {
+        margin-bottom: 2rem;
+    }
+
+    .navbar_sell {
+        padding-bottom: 0.5rem;
+        margin-top: -1rem;
+    }
+
+/*section avis clients*/
+    .customers {
+        padding-bottom: 3rem;
+    }
+
+    .customers button {
+        width: auto;
+    }
+
+/*section article agence*/
+    .agency {
+        padding-bottom: 1.3rem;
+    }
+
+    .agency h1 {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    .agency button {
+        width: auto;
+    }
+
+    .agency p {
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-bottom: 1rem;
+    }
+
+/*section footer*/
+    .footer {
+        display: inherit;
+    }
+
+    .social_media i::before {
+        font-size: 2.5rem;
+    }
+
+    .column2, .column3, .column4 ul {
+        padding-left: 0.6rem;
+        padding-top: 0.4rem;
+    }
+
+    .footer li {
+        font-size: 1.1rem;
+        line-height: 1.5em;
+    }
+
+    .footer a {
+        font-size: 0.9rem;
+    }
+
+    .column4 li span {
+        font-size: 0.9rem;
     }
 
 }
 
-@media all and (max-width: 767px) {
-    
- }
+/*--------------------------------------------*/
+@media all and (max-width: 768px) {
+/*header : logo et menu*/
+    nav ul li {
+        display: none;
+    }
 
-@media all and (min-width: 768px) {
+    .logo-mon-compte {
+        display: none;
+    }
+
+    .logo img {
+     width: 55%;
+    }
+
+    .menu_burger {
+        display: block;
+    }
+
+/*bannière avec fonction recherche*/
+    .menu_search_deco {
+        width: 7.8rem
+    }
+
+    .input_icon_search + i {
+        left: 100px;
+    }
+
+    .banner {
+        padding: 3rem 0;
+    }
+/*section actualités*/
+/*section derniers biens en vente*/
+/*section avis clients*/
+/*section article agence*/
+/*section footer*/
     
 }
 
 
-@media all and (min-width: 992px) {
-    
+@media all and (max-width: 992px) {
+/*header : logo et menu*/
+/*bannière avec fonction recherche*/
+/*section actualités*/
+/*section derniers biens en vente*/
+/*section avis clients*/
+/*section article agence*/
+/*section footer*/   
 
 }
 
-@media all and (min-width: 1200px) {
-    
+@media all and (max-width: 1200px) {
+/*header : logo et menu*/
+/*bannière avec fonction recherche*/
+/*section actualités*/
+/*section derniers biens en vente*/
+/*section avis clients*/
+/*section article agence*/
+/*section footer*/
 }
 
     
