--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -33,7 +33,7 @@ a {
 }
 .menu li {
     list-style: none;
-    margin: 0 40px 0 0;
+    margin: 0 2.5rem 0 0;
 }
 .menu li:hover, .logo-mon-compte:hover {
     font-weight: bolder;
@@ -51,11 +51,11 @@ header {
 a, h1, h2, h3, h4, h5, h6 {
     font-family: "baloo2";
     font-weight: 500;
-    font-size: 32px;
+    font-size: 2rem;
 }
 .contact {
     text-align: center;
-    padding-bottom: 30px;
+    padding-bottom: 1.875rem;
 }
   
 .contactform {
@@ -65,16 +65,16 @@ a, h1, h2, h3, h4, h5, h6 {
 
 .phone {
     h2, h3 {
-        font-size: 20px;
+        font-size: 1.25rem;
     }
     width: 50%;
-    padding: 0 20px 30px;
+    padding: 0 1.25rem 1.875rem;
 
 }
 
 h4 {
     background-color: #b1f3bc; 
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-right: 62%;
     margin-bottom: 1%;    
 }
@@ -89,7 +89,7 @@ h4 {
         background-color: #b1f3bc;        
     }  
     width: 50%;
-    padding: 0 20px;
+    padding: 0 1.25rem;
 } 
  
 #subjet, #subjet-selected, #message, #submit {
@@ -104,8 +104,8 @@ h4 {
     margin-top: 1%;
     margin-bottom: 1%;
 }
-#submit {
-    bottom: 3px;
+.button {
+    width: 0.188rem;
     background-color: #E2FBB7;
 }
 
@@ -114,10 +114,11 @@ h4 {
     display: flex;
     justify-content: space-between;
     width: 80%;
-    padding: 30px 20px 30px 20px;
+    padding: 1.875rem 1.25rem 1.875rem 1.25rem;
    
     h5 {background-color: #b1f3bc; 
-        font-size: 20px;
+        font-size: 1.25rem;
+        margin-bottom: 1%;
     }
 }
 
@@ -132,7 +133,7 @@ footer {
     color: aliceblue;
     display: flex;
     justify-content: space-between;
-    margin-top: 5px;
+    margin-top: 0.313rem;
 }
 footer a {
     color: aliceblue;
